[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "oks"
version = "0.1.0"
requires-python = ">= 3.10"
dependencies = [
    "streamlit == 1.26.0",
    "matplotlib == 3.8.0",
    "pyomo == 6.7.0",
    "datetime == 5.4",
    "pandas == 2.2.0",
]

[project.optional-dependencies]
testing = [
    "pytest == 7.4.4",
]
